scripts/nullaway/annotator/url8df97b3310_dbathon_nurikabe_java_tgz-pJ8-dbathon_nurikabe_MainBenchJ8.txt
../annotator/url8df97b3310_dbathon_nurikabe_java_tgz-pJ8-dbathon_nurikabe_MainBenchJ8/src/dbathon/nurikabe/solver/strategy/AllValidIslandsStrategy.java:72: error: [NullAway] enhanced-for expression inAllIslands is @Nullable
        for (final Cell cell : inAllIslands) {
                               ^
    (see http://t.uber.com/nullaway )
../annotator/url8df97b3310_dbathon_nurikabe_java_tgz-pJ8-dbathon_nurikabe_MainBenchJ8/src/dbathon/nurikabe/solver/strategy/AllValidIslandsStrategy.java:80: error: [NullAway] dereferenced expression reachableMap.get(cell) is @Nullable
          reachableMap.get(cell).add(fixedCell);
                                ^
    (see http://t.uber.com/nullaway )
2 errors
